adds a lot of vim configurations and plugins

--- a/tmuxinator/agalma.yml
+++ b/tmuxinator/agalma.yml
@@ -7,8 +7,8 @@ root: ~/Develop/src/agalma
 # socket_name: foo
 
 # Runs before everything. Use it to start daemons etc.
-pre: if [[ $(mysql.server status) =~ "ERROR"*  ]]; then  mysql.server start ; fi 
-
+# pre: if [[ $(mysql.server status) =~ "ERROR"*  ]]; then  mysql.server start ; fi
+# pre: if [[ ! -f /usr/local/var/postgres/postmaster.pid  ]]; then postgres -D /usr/local/var/postgres ; fi
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
 
@@ -24,7 +24,11 @@ windows:
       panes:
         - git status -bs
         - bundle exec rails c
-        - bundle exec rails db
+  - db:
+      layout: main-horizontal
+      panes:
+          - bundle exec rails db
+          # - if [[ ! -f /usr/local/var/postgres/postmaster.pid  ]]; then postgres -D /usr/local/var/postgres ; fi
   - server: bundle exec rails s
   - logs: ctail -F log/development.log
   - assets:
