removes unnecessary ubinds, adds send-prefix keybinding

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,15 +47,16 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 # tmux prefix
 unbind C-b
 set -g prefix C-j
-
+# prefix inception => tmux within a tmux
+bind-key a send-prefix
 # # paste
 # unbind C-p
 # bind C-p paste-buffer
 
 # window splitting
-unbind %
+# unbind %
 bind \ split-window -h
-unbind '"'
+# unbind '"'
 bind - split-window -v
 
 # Resize Panes
