--- a/tmux.conf
+++ b/tmux.conf
@@ -133,9 +133,9 @@ set -g status-interval 30
 # set-window-option -g window-status-current-bg green
 
 # set color of active pane
-set -g pane-border-fg red
+set -g pane-border-fg white
 #set -g pane-border-bg black
-set -g pane-active-border-fg green
+set -g pane-active-border-fg blue
 #set -g pane-active-border-bg black
 
 
@@ -221,7 +221,8 @@ set -g status-bg colour234
 # if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 set -g status on
 set -g status-interval 2
-set -g status-fg colour231
+# set -g status-fg colour231
+set -g status-fg colour222
 set -g status-bg colour234
 set -g status-left-length 20
 set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(eval $POWERLINE_COMMAND tmux left)'
