--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = https://github.com/farfanoide/oh-my-zsh
+[submodule "vim/bundle/vundle.vim"]
+	path = vim/bundle/vundle.vim
+	url = https://github.com/gmarik/Vundle.vim
