--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,8 @@
 	path = oh-my-zsh
 	url = https://github.com/farfanoide/oh-my-zsh
 [submodule "vim/bundle/vundle.vim"]
-	path = vim/bundle/vundle.vim
+	path = vim/bundle/vundle
+	url = https://github.com/gmarik/Vundle.vim
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
 	url = https://github.com/gmarik/Vundle.vim
