tidy tmuxconf, adds delegate and trim to vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -110,15 +110,8 @@ set-window-option -g utf8 on
 set -g status-interval 30
 
 # center the status bar
-# set -g status-justify left
+set -g status-justify left
 
-# show session, window, pane in left status bar
-#set -g status-left-length 40
-#set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
-
-# show hostname, date, time, and battery in right status bar
-#set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M'
-# [fg=red]#(battery discharging)#[default]#(battery charging)'
 
 ###########################
 # Colors
@@ -149,87 +142,20 @@ setw -g monitor-activity on
 bind-key ^D detach-client
 bind-key ^C new-window
 
-# # This is native as of 1.8 (prefix z)
-#
-# #unbind +
-# #bind + \
-# #    new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
-# #    swap-pane -s tmux-zoom.0 \;\
-# #    select-window -t tmux-zoom
-# #
-# #unbind -
-# #bind - \
-# #    last-window \;\
-# #    swap-pane -s tmux-zoom.0 \;\
-# #    kill-window -t tmux-zoom
-#
-# # reload tmux config
-# unbind r
-# bind r \
-#     source-file ~/.tmux.conf \;\
-#         display 'Reloaded tmux config.'
-#
-#         set -g mode-mouse on
-#         set -g mouse-resize-pane on
-#         set -g mouse-select-pane on
-#         set -g mouse-select-window on
-#
-#         # Toggle mouse on
-#         bind m \
-#             set -g mode-mouse on \;\
-#                 set -g mouse-resize-pane on \;\
-#                     set -g mouse-select-pane on \;\
-#                         set -g mouse-select-window on \;\
-#                             display 'Mouse: ON'
-#
-#                             # Toggle mouse off
-#                             bind M \
-#                                 set -g mode-mouse off \;\
-#                                     set -g mouse-resize-pane off \;\
-#                                         set -g mouse-select-pane off \;\
-#                                             set -g mouse-select-window off \;\
-#                                                 display 'Mouse: OFF'
-#
-#                                                 # pass through xterm keys
-#                                                 set -g xterm-keys on
-#
-
-
-
 # Powerline Stuff
-# set -g status on
-# set -g status-interval 10
 set -g status-fg colour231
 set -g status-bg colour234
-# set -g status-left-length 20
-# set -g status-right-length 150
-# set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(eval [$POWERLINE_COMMAND] tmux left)'
-# set -g status-right "#[fg=colour155]#(pmset -g batt | ~/.bin/battinfo.rb) | #[fg=colour45]%d %b %R #[fg=colour155]| #H "
-# set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
-# set -g status-left "#[fg=colour155][#S] #[fg=colour110]#I #[fg=colour81]pane: #P"
 
- # set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
- # set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
- # set-window-option -g window-status-fg colour249
- # set-window-option -g window-status-activity-attr none
- # set-window-option -g window-status-bell-attr none
- # set-window-option -g window-status-activity-fg yellow
- # set-window-option -g window-status-bell-fg red
-# vim: ft=tmux
-
-
-# if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 set -g status on
 set -g status-interval 2
-# set -g status-fg colour231
 set -g status-fg colour222
 set -g status-bg colour234
 set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(eval $POWERLINE_COMMAND tmux left)'
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(eval $POWERLINE_COMMAND tmux left)'
 set -g status-right-length 150
 set -g status-right "#[fg=colour155]#(pmset -g batt | ~/.bin/battinfo.rb) | #[fg=colour45]%d %b %R #[fg=colour155]| #H "
-set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
-set -g window-status-current-format "#[fg=colour236,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
+set -g window-status-current-format "#[fg=colour236,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
 set-window-option -g window-status-fg colour249
 set-window-option -g window-status-activity-attr none
 set-window-option -g window-status-bell-attr none
