updates tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,8 @@ set -g renumber-windows on
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
 # requires brew install reattach-to-user-namespase
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+# now we hide that ugly reattach window name
+setw -g automatic-rename on
 
 ###########################
 #  Key Bindings
