--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal "screen-256color"
 
+# Vim-like navigation
+set-window-option -g mode-keys vi
+
 # use zsh as default shell
 # set-option -g default-command /usr/local/bin/zsh --login
 set-option -g default-shell /usr/local/bin/zsh
@@ -47,8 +50,8 @@ setw -g automatic-rename on
 ###########################
 
 # tmux prefix
-unbind C-b
-set -g prefix C-j
+# unbind C-b
+# set -g prefix C-a
 # prefix inception => tmux within a tmux
 bind-key a send-prefix
 # # paste
@@ -68,7 +71,18 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# seamles vim/tmux navigation
 # Select Panes
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+# it's nice to jump fast between windows but whata about clearing screen?
+bind C-l send-keys 'C-l'
+
 unbind-key j
 unbind-key k
 unbind-key h
