moves from ohmyzsh to prezto
moves custom plugin to .bin <-- gonna change it
adds z* custom files
updates links.sh to pull recursively submodules and install vim plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/bundle/vundle.vim"]
 	path = vim/bundle/vundle
 	url = https://github.com/gmarik/Vundle.vim
+[submodule "zprezto"]
+	path = zprezto
+	url = https://github.com/sorin-ionescu/prezto
