linux/osx tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ set-window-option -g mode-keys vi
 
 # use zsh as default shell
 # set-option -g default-command /usr/local/bin/zsh --login
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /usr/bin/zsh
 
 # increase scroll-back history
 set -g history-limit 5000
@@ -38,10 +38,6 @@ set -g visual-activity on
 # # re-number windows when one is closed
 set -g renumber-windows on
 
-# enable pbcopy and pbpaste
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
-# requires brew install reattach-to-user-namespase
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 # now we hide that ugly reattach window name
 setw -g automatic-rename on
 
@@ -53,7 +49,7 @@ setw -g automatic-rename on
 # unbind C-b
 # set -g prefix C-a
 # prefix inception => tmux within a tmux
-bind-key a send-prefix
+bind-key b send-prefix
 # # paste
 # unbind C-p
 # bind C-p paste-buffer
@@ -167,9 +163,8 @@ set -g status-interval 2
 set -g status-fg colour222
 set -g status-bg colour234
 set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(eval $POWERLINE_COMMAND tmux left)'
 set -g status-right-length 150
-set -g status-right "#[fg=colour155]#(pmset -g batt | ~/.bin/battinfo.rb) | #[fg=colour45]%d %b %R #[fg=colour155]| #H "
+set -g status-right "#[fg=colour45]%d %b %R #[fg=colour155]| #H "
 set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
 set -g window-status-current-format "#[fg=colour236,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
 set-window-option -g window-status-fg colour249
@@ -178,3 +173,5 @@ set-window-option -g window-status-bell-attr none
 set-window-option -g window-status-activity-fg yellow
 set-window-option -g window-status-bell-fg red
 # vim: ft=tmux
+# load mac specific conf
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
