updates, adds linux commands

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ set -g history-limit 5000
 # use vim key bindings
 # setw -g mode-keys vi
 
+# copy parent environment variabels
+set -g update-environment -r
+
 # enable mouse
 set -g mode-mouse on
 set -g mouse-select-pane on
