--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# -*- mode: tmux -*-
+# vi: set ft=tmux :
+
 # use 256 term for pretty colors
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal "screen-256color"
@@ -21,6 +24,8 @@ set -g update-environment -r
 # enable mouse
 set -g mode-mouse on
 set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
@@ -176,6 +181,9 @@ set-window-option -g window-status-activity-attr none
 set-window-option -g window-status-bell-attr none
 set-window-option -g window-status-activity-fg yellow
 set-window-option -g window-status-bell-fg red
-# vim: ft=tmux
+
 # load mac specific conf
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+
+# Add binding for tmuxstart sessions
+bind S command-prompt -p "Make/attach session" "new-window 'tmuxstart \'%%\''"
