--- a/tmux.conf
+++ b/tmux.conf
@@ -6,17 +6,21 @@
 set -g default-terminal "screen-256color"
 
 # Vim-like navigation
-set-window-option -g mode-keys vi
+set-option -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # use zsh as default shell
-# set-option -g default-command /usr/local/bin/zsh --login
-set-option -g default-shell /usr/bin/zsh
+#set-option -g default-shell /usr/local/bin/zsh
 
 # increase scroll-back history
 set -g history-limit 5000
-
-# use vim key bindings
-# setw -g mode-keys vi
 
 # copy parent environment variabels
 set -g update-environment -r
@@ -76,7 +80,6 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # seamles vim/tmux navigation
-# Select Panes
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
@@ -84,7 +87,7 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# it's nice to jump fast between windows but whata about clearing screen?
+# it's nice to jump fast between windows but what about clearing screen?
 bind C-l send-keys 'C-l'
 
 unbind-key j
@@ -101,13 +104,9 @@ bind-key -r l select-pane -R
 unbind y
 bind y setw synchronize-panes
 
-# List Panes
-# unbind u
-#bind u choose-pane
-
 # # create 25% lower split
-# unbind t
-# bind t split-window -p 25
+unbind t
+bind t split-window -p 25
 
 # # quickly switch panes
 # unbind ^J
@@ -117,39 +116,19 @@ bind y setw synchronize-panes
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-###########################
-# Status Bar
-###########################
-
-# enable UTF-8 support
-set -g status-utf8 on
-set -g utf8
-set-window-option -g utf8 on
-
-# set refresh interval for status bar
-set -g status-interval 30
-
-# center the status bar
-set -g status-justify left
+# # Keep your finger on ctrl, or don't
+bind-key ^D detach-client
+bind-key ^C new-window
+bind-key ^Z resize-pane -Z
 
 
 ###########################
 # Colors
 ###########################
 
-# color status bar
-#set -g status-bg colour235
-#set -g status-fg white
-
-# highlight current window
-# set-window-option -g window-status-current-fg black
-# set-window-option -g window-status-current-bg green
-
-# set color of active pane
+# set color of active pane (probably overwritten by theme)
 set -g pane-border-fg white
-#set -g pane-border-bg black
 set -g pane-active-border-fg blue
-#set -g pane-active-border-bg black
 
 
 # Ring the bell if any background window rang a bell
@@ -158,32 +137,41 @@ set -g bell-action any
 # Watch for activity in background windows
 setw -g monitor-activity on
 
-# # Keep your finger on ctrl, or don't
-bind-key ^D detach-client
-bind-key ^C new-window
-bind-key ^Z resize-pane -Z
 
-# Powerline Stuff
-set -g status-fg colour231
-set -g status-bg colour234
-
+###########################
+# Status Bar
+###########################
 set -g status on
-set -g status-interval 2
-set -g status-fg colour222
-set -g status-bg colour234
-set -g status-left-length 20
-set -g status-right-length 150
-set -g status-right "#[fg=colour45]%d %b %R #[fg=colour155]| #H "
-set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
-set -g window-status-current-format "#[fg=colour236,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
-set-window-option -g window-status-fg colour249
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-bell-attr none
-set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-bell-fg red
+
+# set refresh interval for status bar
+set -g status-interval 30
+
+
+# enable UTF-8 support
+set -g status-utf8 on
+set -g utf8 on
+
+# center the status bar
+set -g status-justify centre
+
+# load theme
+source ~/.tmux/themes/tomorrow-night
 
 # load mac specific conf
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
+
+
+
+set -g window-status-format "#I #[default]#W #F "
+set -g window-status-current-format "[ #I #W #F ]"
+
+set -g status-left "[ #S ]"
+set -g status-left-style "bg=green,fg=black"
+set -g status-left-length 30
+
+set -g status-right "[ %R ][ #h ]"
+set -g status-right-style "bg=green,fg=black"
 
 # Add binding for tmuxstart sessions
 bind S command-prompt -p "Make/attach session" "new-window 'tmuxstart \'%%\''"
+
