various tmux conf changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,17 +8,6 @@ set -g default-terminal "screen-256color"
 # Vim-like navigation
 set-option -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# use zsh as default shell
-#set-option -g default-shell /usr/local/bin/zsh
-
 # increase scroll-back history
 set -g history-limit 5000
 
@@ -57,19 +46,13 @@ setw -g automatic-rename on
 #  Key Bindings
 ###########################
 
-# tmux prefix
-# unbind C-b
-# set -g prefix C-a
 # prefix inception => tmux within a tmux
 bind-key b send-prefix
-# # paste
-# unbind C-p
-# bind C-p paste-buffer
 
 # window splitting
-# unbind %
+# % = \ ==> split vertically
 bind \ split-window -h
-# unbind '"'
+#  " = - ==> split horizontally
 bind - split-window -v
 
 # Resize Panes
@@ -104,15 +87,11 @@ bind-key -r l select-pane -R
 unbind y
 bind y setw synchronize-panes
 
-# # create 25% lower split
+# create 25% lower split
 unbind t
 bind t split-window -p 25
 
-# # quickly switch panes
-# unbind ^J
-# bind ^J select-pane -t :.+
-
-# # force a reload of the config file
+# force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -159,8 +138,6 @@ source ~/.tmux/themes/tomorrow-night
 
 # load mac specific conf
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
-
-
 
 set -g window-status-format "#I #[default]#W #F "
 set -g window-status-current-format "[ #I #W #F ]"
