increases buffer history tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g default-terminal "screen-256color"
 set-option -g mode-keys vi
 
 # increase scroll-back history
-set -g history-limit 5000
+set -g history-limit 15000
 
 # copy parent environment variabels
 set -g update-environment -r
@@ -42,9 +42,7 @@ set -g renumber-windows on
 # now we hide that ugly reattach window name
 setw -g automatic-rename on
 
-###########################
-#  Key Bindings
-###########################
+#= Key Bindings
 
 # prefix inception => tmux within a tmux
 bind-key b send-prefix
@@ -101,9 +99,7 @@ bind-key ^C new-window
 bind-key ^Z resize-pane -Z
 
 
-###########################
-# Colors
-###########################
+#= Colors
 
 # set color of active pane (probably overwritten by theme)
 set -g pane-border-fg white
@@ -117,9 +113,7 @@ set -g bell-action any
 setw -g monitor-activity on
 
 
-###########################
-# Status Bar
-###########################
+#= Status Bar
 set -g status on
 
 # set refresh interval for status bar
