adds music_session_toggle scipt and binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,7 +68,7 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# it's nice to jump fast between windows but what about clearing screen?
+# it's nice to jump fast between windows but what about clearing the screen?
 bind C-l send-keys 'C-l'
 
 unbind-key j
@@ -145,4 +145,7 @@ set -g status-right-style "bg=green,fg=black"
 
 # Add binding for tmuxstart sessions
 bind S command-prompt -p "Make/attach session" "new-window 'tmuxstart \'%%\''"
+
+# quickly toggle between the music pane and current one
+bind m run 'music_session_toggle "main:Music"'
 
