changes S shortcut tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -144,7 +144,7 @@ set -g status-right "[ %R ][ #h ]"
 set -g status-right-style "bg=green,fg=black"
 
 # Add binding for tmuxstart sessions
-bind S command-prompt -p "Make/attach session" "new-window 'tmuxstart \'%%\''"
+bind S command-prompt -p "Make/attach session" "new-window 'yat.sh \'%%\''"
 
 # quickly toggle between the music pane and current one
 bind m run 'music_session_toggle "main:Music"'
