simplifies tmux configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,20 +23,20 @@ set -g mouse-select-window on
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
 
-# # increase repeat time for repeatable commands
+# increase repeat time for repeatable commands
 # set -g repeat-time 1000
 
-# # start window index at 1
+# start window index at 1
 set -g base-index 1
 
-# # start pane index at 1
+# start pane index at 1
 setw -g pane-base-index 1
 
-# # highlight window when it has new activity
+# highlight window when it has new activity
 setw -g monitor-activity on
 set -g visual-activity on
 
-# # re-number windows when one is closed
+# re-number windows when one is closed
 set -g renumber-windows on
 
 # now we hide that ugly reattach window name
@@ -93,7 +93,7 @@ bind t split-window -p 25
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# # Keep your finger on ctrl, or don't
+# Keep your finger on ctrl, or don't
 bind-key ^D detach-client
 bind-key ^C new-window
 bind-key ^Z resize-pane -Z
@@ -137,11 +137,13 @@ set -g window-status-format "#I #[default]#W #F "
 set -g window-status-current-format "[ #I #W #F ]"
 
 set -g status-left "[ #S ]"
-set -g status-left-style "bg=green,fg=black"
+# set -g status-left-style "bg=green,fg=black"
 set -g status-left-length 30
 
+# set -g status-right "[ %a %m-%d | %H:%M | #h ]"
+# set -g status-bg blue
 set -g status-right "[ %R ][ #h ]"
-set -g status-right-style "bg=green,fg=black"
+# set -g status-right-style "bg=green,fg=black"
 
 # Add binding for tmuxstart sessions
 bind S command-prompt -p "Make/attach session" "new-window 'yat.sh \'%%\''"
