updates tmux configurations

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,3 @@
-# -*- mode: tmux -*-
-# vi: set ft=tmux :
-
 # use 256 term for pretty colors
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal "screen-256color"
@@ -129,7 +126,7 @@ set -g utf8 on
 set -g status-justify centre
 
 # load theme
-source ~/.tmux/themes/tomorrow-night
+source ~/.tmux/themes/solarized-dark
 
 # load mac specific conf
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
@@ -143,7 +140,7 @@ set -g status-left-length 30
 
 # set -g status-right "[ %a %m-%d | %H:%M | #h ]"
 # set -g status-bg blue
-set -g status-right "[ %R ][ #h ]"
+set -g status-right "[ %R | #h ]"
 # set -g status-right-style "bg=green,fg=black"
 
 # Add binding for tmuxstart sessions
@@ -152,3 +149,5 @@ bind S command-prompt -p "Make/attach session" "new-window 'yat.sh \'%%\''"
 # quickly toggle between the music pane and current one
 bind m run 'music_session_toggle "main:Music"'
 
+# -*- mode: tmux -*-
+# vi: set ft=tmux :
