adds iconified light tmuxtheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -88,7 +88,7 @@ bind-key ^Z resize-pane -Z
 # Theme: -------------------------------------------------------------------{{{
 
 # load theme
-source ~/.tmux/themes/iconified.tmuxtheme
+source ~/.tmux/themes/iconified_dark.tmuxtheme
 
 # load mac specific conf
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
