adds tmux command history file

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,8 @@ set -g repeat-time 200
 # start window index at 1
 set -g base-index 1
 
+set -g history-file ~/.tmux/history
+
 # start pane index at 1
 setw -g pane-base-index 1
 
