adds tmux options

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,20 +3,22 @@
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal "screen-256color"
 
-# Vim-like navigation
-set-option -g mode-keys vi
 
-# increase scroll-back history
-set -g history-limit 15000
+set-option -g mode-keys vi      # Vim-like navigation
+set-option -g status-keys emacs # Emacs key bindings in command line (vi
+                                # bindings do NOT work as expected)
 
-# copy parent environment variabels
-set -g update-environment -r
 
-# enable mouse
-set -g mouse on
-# tmux > 2.1 scroll workaround
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+set -g history-limit 15000 # increase scroll-back history
+
+
+set -g update-environment -r # copy parent environment variabels
+
+
+set -g mouse on # enable mouse
+# # tmux > 2.1 scroll workaround
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+# bind -n WheelDownPane select-pane -t= \; send-keys -M
 # set -g mode-mouse on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
@@ -77,6 +79,10 @@ bind y setw synchronize-panes
 # create 25% lower split
 unbind t
 bind t split-window -p 25
+
+# Swap windows
+bind-key -r > swap-window -t :+
+bind-key -r < swap-window -t :-
 
 # force a reload of the config file
 unbind r
