--- a/tmux.conf
+++ b/tmux.conf
@@ -17,8 +17,8 @@ set -g update-environment -r # copy parent environment variabels
 
 set -g mouse on # enable mouse
 # # tmux > 2.1 scroll workaround
-# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-# bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 # set -g mode-mouse on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
@@ -95,14 +95,17 @@ bind-key ^Z resize-pane -Z
 # --------------------------------------------------------------------------}}}
 # Theme: -------------------------------------------------------------------{{{
 
-# load theme
-source ~/.tmux/themes/iconified_dark.tmuxtheme
-
 # load mac specific conf
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
 
 # quickly toggle between the music pane and current one
 bind m run 'music_session_toggle "main:Music"'
 
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'farfanoide/iconified_tmuxtheme'
+set -g @iconified_flavour 'dark'
+
+run '~/.tmux/plugins/tpm/tpm'
 # --------------------------------------------------------------------------}}}
 # vi: set ft=tmux fdm=marker:
