updates lots of settings....

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 # use 256 term for pretty colors
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal "screen-256color"
+# set -g terminal-overrides 'xterm:colors=256'
+# for neovim
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 
 set-option -g mode-keys vi      # Vim-like navigation
@@ -51,7 +54,7 @@ setw -g automatic-rename on
 # Key Bindings: ------------------------------------------------------------{{{
 # window splitting
 # % = \ ==> split vertically
-bind \ split-window -h
+bind '\' split-window -h
 #  " = - ==> split horizontally
 bind - split-window -v
 
@@ -92,20 +95,24 @@ bind r source-file ~/.tmux.conf \; display "Configurations Reloaded!"
 bind-key ^D detach-client
 bind-key ^C new-window
 bind-key ^Z resize-pane -Z
+
 # --------------------------------------------------------------------------}}}
 # Theme: -------------------------------------------------------------------{{{
 
 # load mac specific conf
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
+# if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
 
 # quickly toggle between the music pane and current one
 bind m run 'music_session_toggle "main:Music"'
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @plugin 'farfanoide/iconified_tmuxtheme'
 set -g @iconified_flavour 'dark'
 
+# set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @nord_tmux_no_patched_font "1"
 run '~/.tmux/plugins/tpm/tpm'
 # --------------------------------------------------------------------------}}}
 # vi: set ft=tmux fdm=marker:
