--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+    "jedi.enable": true,
     "python.jediEnabled": false,
     "python.linting.pylintArgs": [ "--load-plugins=pylint_django" ],
     "python.linting.pylintPath": "~/.pyenv/versions/vedas/lib/python3.7/site-packages/pylint",
