--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -119,8 +119,8 @@ font:
 #   - (macOS) Menlo
 #   - (Linux/BSD) monospace
 #   - (Windows) Consolas
-        # family: MesloLGL Nerd Font RegularForPowerline
-        family: Iosevka Nerd Font
+        family: FiraCode Nerd Font
+        # family: Meslo Nerd Font
 
 # The `style` can be specified to pick a specific face.
 #style: Regular
@@ -293,7 +293,11 @@ font:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.98
+window:
+  opacity: 0.96
+  dimensions:
+    columns: 160
+    lines: 25
 
 #selection:
 #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
