--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@ set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 
+set-option -s status-interval 5
 set-option -g mode-keys vi      # Vim-like navigation
 set-option -g status-keys emacs # Emacs key bindings in command line (vi
                                 # bindings do NOT work as expected)
