--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal "screen-256color"
 # set -g terminal-overrides 'xterm:colors=256'
 # for neovim
 set-option -sa terminal-overrides ',xterm-256color:RGB'
-
+set-option -g focus-events on # enable autoread on nvim
 
 set-option -s status-interval 5
 set-option -g mode-keys vi      # Vim-like navigation
