--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ bind-key ^Z resize-pane -Z
 # Theme: -------------------------------------------------------------------{{{
 
 # load mac specific conf
-# if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
 
 # quickly toggle between the music pane and current one
 bind m run 'music_session_toggle "main:Music"'
