more nvim tinkering around

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -g focus-events on # enable autoread on nvim
 
-set-option -s status-interval 5
+set-option -g status-interval 5
 set-option -g mode-keys vi      # Vim-like navigation
 set-option -g status-keys emacs # Emacs key bindings in command line (vi
                                 # bindings do NOT work as expected)
@@ -99,9 +99,6 @@ bind-key ^Z resize-pane -Z
 
 # --------------------------------------------------------------------------}}}
 # Theme: -------------------------------------------------------------------{{{
-
-# load mac specific conf
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux/tmux-osx.conf'
 
 # quickly toggle between the music pane and current one
 bind m run 'music_session_toggle "main:Music"'
