--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,10 @@
 # Options: -----------------------------------------------------------------{{{
 # use 256 term for pretty colors
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
-set -g default-terminal "screen-256color"
+##set -g default-terminal "screen-256color"
 # set -g terminal-overrides 'xterm:colors=256'
 # for neovim
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+##set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -g focus-events on # enable autoread on nvim
 
 set-option -g status-interval 5
